--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "example-code",
   "version": "0.0.1",
   "dependencies": {
+    "@monaco-editor/react": "^4.5.1",
+    "monaco-editor": "^0.38.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
