--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@monaco-editor/react": "^4.5.1",
     "monaco-editor": "^0.38.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sucrase": "^3.32.0"
   },
   "scripts": {
     "dev": "vite"
