--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "monaco-editor": "^0.38.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "stoneberry": "^0.1.4",
+    "stoneberry": "file:../stoneberry",
     "sucrase": "^3.32.0",
     "thimbleberry": "^0.1.10"
   },
