--- a/package.json
+++ b/package.json
@@ -3,17 +3,32 @@
   "version": "0.0.1",
   "dependencies": {
     "@monaco-editor/react": "^4.5.1",
-    "@webgpu/types": "^0.1.32",
     "monaco-editor": "^0.38.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "stoneberry": "file:../stoneberry",
-    "stoneberry-examples": "^0.1.1",
-    "sucrase": "^3.32.0",
-    "thimbleberry": "^0.1.10"
+    "sucrase": "^3.32.0"
   },
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "prepublish": "rimraf dist && pnpm run build && pnpm run build:types",
+    "build": "vite build",
+    "build:types": "tsc --project tsconfig.build.json"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2"
+  },
+  "type": "module",
+  "main": "dist/CodeExample.js",
+  "module": "dist/CodeExample.js",
+  "types": "dist/CodeExample.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/CodeExample.js",
+      "require": "./dist/CodeExample.js",
+      "types": "./dist/CodeExample.d.ts"
+    },
+    "./style.css": {
+      "import": "./dist/style.css",
+      "require": "./dist/style.css"
+    }
   },
   "devDependencies": {
     "@types/react": "^18.2.8",
@@ -24,6 +39,7 @@
     "eslint": "^8.42.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "rimraf": "^5.0.1",
     "typescript": "^5.1.3",
     "vite": "^4.3.9"
   }
