--- a/package.json
+++ b/package.json
@@ -41,5 +41,12 @@
     "rimraf": "^5.0.1",
     "typescript": "^5.1.3",
     "vite": "^4.3.9"
-  }
+  },
+  "keywords": [
+    "react",
+    "live",
+    "docusaurus",
+    "preview",
+    "typescript"
+  ]
 }
