--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "example-code",
-  "version": "0.0.1",
+  "name": "live-code",
+  "version": "0.1.0",
   "dependencies": {
     "@monaco-editor/react": "^4.5.1",
     "monaco-editor": "^0.39.0",
