--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "live-code",
+  "name": "live-typescript",
   "version": "0.1.0",
   "dependencies": {
     "@monaco-editor/react": "^4.5.1",
