--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "live-typescript",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "dependencies": {
     "@monaco-editor/react": "^4.5.1",
     "monaco-editor": "^0.39.0",
@@ -12,7 +12,7 @@
     "build:types": "tsc --project tsconfig.build.json"
   },
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": ">=17"
   },
   "type": "module",
   "main": "dist/CodeExample.js",
