--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "live-typescript",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "dependencies": {
     "@monaco-editor/react": "^4.5.1",
     "monaco-editor": "^0.39.0",
@@ -42,6 +42,7 @@
     "typescript": "^5.1.3",
     "vite": "^4.3.9"
   },
+  "repository": "github:mighdoll/live-typescript",
   "keywords": [
     "react",
     "live",
