--- a/package.json
+++ b/package.json
@@ -1,53 +1,9 @@
 {
-  "name": "live-typescript",
-  "version": "0.1.4",
-  "dependencies": {
-    "@monaco-editor/react": "^4.5.1",
-    "monaco-editor": "^0.39.0",
-    "sucrase": "^3.32.0"
-  },
+  "name": "root",
   "scripts": {
-    "prepublish": "rimraf dist && pnpm run build && pnpm run build:types",
-    "build": "vite build",
-    "build:types": "tsc --project tsconfig.build.json"
-  },
-  "peerDependencies": {
-    "react": ">=17"
-  },
-  "type": "module",
-  "main": "dist/CodeExample.js",
-  "module": "dist/CodeExample.js",
-  "types": "dist/CodeExample.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/CodeExample.js",
-      "require": "./dist/CodeExample.js",
-      "types": "./dist/CodeExample.d.ts"
-    },
-    "./style.css": {
-      "import": "./dist/style.css",
-      "require": "./dist/style.css"
-    }
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.9",
-    "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.42.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
-    "rimraf": "^5.0.1",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9"
-  },
-  "repository": "github:mighdoll/live-typescript",
-  "keywords": [
-    "react",
-    "live",
-    "docusaurus",
-    "preview",
-    "typescript"
-  ]
+    "build:rollup-plugin": "pnpm --filter rollup-plugin* build",
+    "build:live-typescript": "pnpm --filter live-typescript build",
+    "example": "pnpm --filter example dev",
+    "build:all": "pnpm build:rollup-plugin && pnpm build:live-typescript && pnpm example"
+  }
 }
