--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -17,14 +17,20 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "rimraf": "^5.0.1",
+    "rollup-plugin-recursive-imports": "workspace:*",
     "tslib": "^2.6.0",
     "typescript": "^5.1.6",
     "vite": "^4.4.4"
   },
   "dependencies": {
+    "@webgpu/types": "^0.1.34",
+    "live-typescript": "workspace:*",
+    "monaco-editor": "^0.39.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.26.2",
+    "stoneberry": "^0.1.13",
+    "stoneberry-examples": "^0.1.5",
     "thimbleberry": "^0.1.14"
   }
 }
