--- a/packages/rollup-plugin-recursive-imports/package.json
+++ b/packages/rollup-plugin-recursive-imports/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.0",
   "exports": "./dist/rollup-plugin-recursive-imports.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "build:rollup": "rollup -c rollup.config.js"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.2",
