--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "scripts": {
     "build:rollup-plugin": "pnpm --filter rollup-plugin* build",
-    "build:live-typescript": "pnpm --filter live-typescript build",
+    "build:live-typescript": "pnpm --filter live-typescript prepublish",
     "example": "pnpm --filter example dev",
     "build:all": "pnpm build:rollup-plugin && pnpm build:live-typescript && pnpm example"
   }
