--- a/packages/rollup-plugin-recursive-imports/package.json
+++ b/packages/rollup-plugin-recursive-imports/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "blueimp-md5": "^2.19.0",
     "import-meta-resolve": "^3.0.0",
     "parse-imports": "^1.1.2"
   }
