setup for testing

--- a/packages/rollup-plugin-recursive-imports/package.json
+++ b/packages/rollup-plugin-recursive-imports/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.1.0",
   "exports": "./dist/rollup-plugin-recursive-imports.js",
+  "types": "./dist/rollup-plugin-recursive-imports.d.ts",
   "scripts": {
     "build": "tsc",
     "build:rollup": "rollup -c rollup.config.js"
