--- a/packages/rollup-plugin-recursive-imports/tsconfig.json
+++ b/packages/rollup-plugin-recursive-imports/tsconfig.json
@@ -6,7 +6,8 @@
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "Bundler",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "declaration": true
   },
   "include": ["src/**/*.ts"],
   "buildOptions": {
