--- a/packages/rollup-plugin-recursive-imports/package.json
+++ b/packages/rollup-plugin-recursive-imports/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.2",
+    "@types/blueimp-md5": "^2.18.0",
     "@types/node": "^20.4.2",
     "rimraf": "^5.0.1",
     "rollup": "^3.26.2",
