--- a/packages/rollup-plugin-recursive-imports/tsconfig.json
+++ b/packages/rollup-plugin-recursive-imports/tsconfig.json
@@ -7,7 +7,8 @@
     "esModuleInterop": true,
     "moduleResolution": "Bundler",
     "skipLibCheck": true,
-    "declaration": true
+    "declaration": true,
+    "rootDir": "src"
   },
   "include": ["src/**/*.ts"],
   "buildOptions": {
