--- a/packages/rollup-plugin-recursive-imports/package.json
+++ b/packages/rollup-plugin-recursive-imports/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "blueimp-md5": "^2.19.0",
+    "esbuild": "^0.18.14",
     "import-meta-resolve": "^3.0.0",
     "parse-imports": "^1.1.2"
   }
