build example from local src

--- a/packages/example/tsconfig.json
+++ b/packages/example/tsconfig.json
@@ -18,7 +18,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "live-typescript": ["../live-typescript/src/index.js"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.vite.json" }]
