--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -20,7 +20,8 @@
     "rollup-plugin-remap-imports": "workspace:*",
     "tslib": "^2.6.0",
     "typescript": "^5.1.6",
-    "vite": "^4.4.4"
+    "vite": "^4.4.5",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
     "@webgpu/types": "^0.1.34",
