--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "root",
   "scripts": {
-    "build:rollup-plugin": "pnpm --filter rollup-plugin* build",
+    "build:rollup-plugin": "pnpm --filter rollup-plugin-remap* build",
     "build:live-typescript": "pnpm --filter live-typescript prepublish",
     "example": "pnpm --filter example dev",
     "build:all": "pnpm build:rollup-plugin && pnpm build:live-typescript",
