--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "rimraf": "^5.0.1",
     "rollup-plugin-remap-imports": "workspace:*",
+    "rollup-plugin-typefiles": "workspace:*",
     "tslib": "^2.6.0",
     "typescript": "^5.1.6",
     "vite": "^4.4.5",
