--- a/packages/rollup-plugin-typefiles/package.json
+++ b/packages/rollup-plugin-typefiles/package.json
@@ -18,6 +18,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "parse-imports": "^1.1.2"
+    "import-meta-resolve": "^3.0.0",
+    "rollup-plugin-remap-imports": "workspace:*"
   }
 }
