--- a/packages/rollup-plugin-typefiles/tsconfig.json
+++ b/packages/rollup-plugin-typefiles/tsconfig.json
@@ -1,14 +1,17 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ES2022",
-    "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "Bundler",
     "skipLibCheck": true,
     "declaration": true,
-    "rootDir": "src"
+    "rootDir": "src",
+    "paths": {
+      "rollup-plugin-remap-imports": [
+        "../rollup-plugin-remap-imports/src/index.ts"
+      ]
+    }
   },
   "include": ["src/**/*.ts"],
   "buildOptions": {
