--- a/packages/rollup-plugin-remap-imports/tsconfig.json
+++ b/packages/rollup-plugin-remap-imports/tsconfig.json
@@ -7,10 +7,7 @@
     "esModuleInterop": true,
     "moduleResolution": "Bundler",
     "skipLibCheck": true,
-    "declaration": true,
+    "declaration": true
   },
-  "include": ["src/**/*.ts"],
-  "buildOptions": {
-    "outDir": "dist"
-  }
+  "include": ["src/**/*.ts"]
 }
