--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -19,6 +19,7 @@
     "rimraf": "^5.0.1",
     "rollup-plugin-remap-imports": "workspace:*",
     "rollup-plugin-typefiles": "workspace:*",
+    "rollup-plugin-sourcefiles": "workspace:*",
     "tslib": "^2.6.0",
     "typescript": "^5.1.6",
     "vite": "^4.4.5",
