--- a/packages/example/tsconfig.json
+++ b/packages/example/tsconfig.json
@@ -23,6 +23,6 @@
       "live-typescript": ["../live-typescript/src/index.js"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "ImportsTypes.d.ts"],
   "references": [{ "path": "./tsconfig.vite.json" }]
 }
