--- a/packages/local-package/package.json
+++ b/packages/local-package/package.json
@@ -1,12 +1,16 @@
 {
   "name": "local-package",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    "import": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "main": "./dist/index.js"
+  },
   "dependencies": {
     "stoneberry": "^0.1.13"
-  },
-  "files": ["dist"],
-  "exports": {
-    ".": "./dist/index.js"
   },
   "devDependencies": {
     "typescript": "^5.2.2"
